feature: adding bulk downloading